# canary

./: .gitignore  .ocamlformat  LICENSE  Makefile  README.md  canary.opam  canary.opam.locked  dune-project
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  postCreate.sh
.github/workflows/: runtest.yml
lib/: canary.ml  canary.mli  dune  notify_failures.ml
test/: dune  main.ml
