(library
 (name canary)
 (public_name canary)
 (wrapped true)
 (libraries
  containers
  lwt
  lwt.unix
  ptime
  cohttp
  cohttp-lwt
  cohttp-lwt-unix
  yojson)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving_yojson
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord)))

(env
 (dev
  (flags
   (:standard -w -g)))
 (release
  (flags
   (:standard -w -g))))
